More implemented and several bug fixes